# hierarchical-agent-rag

./: AGENTS.md  README.md  Taskfile.yml  app.py  pyproject.toml  video-index.code-workspace
video_index/: agent.py  callbacks.py  indexer.py  indexer_ollama.py  models.py
video_index/ui/: __init__.py  chat.py  tree_view.py
video_index/ui/assets/: tree_script.js  tree_styles.css
